--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <h3>Savings</h3>
             <div>
                 <input type="checkbox" id="codeChurnReductionToggle" onchange="toggleInput('codeChurnReduction')">
-                <label for="codeChurnReductionToggle">Code Churn Reduction:</label>
+                <label for="codeChurnReductionToggle">Code Churn Reduction Percentage:</label>
                 <input type="number" id="codeChurnReduction" disabled>
             </div>
 
             <div>
                 <input type="checkbox" id="productivityImprovementToggle" onchange="toggleInput('productivityImprovement')">
-                <label for="productivityImprovementToggle">Productivity Improvement:</label>
+                <label for="productivityImprovementToggle">Productivity Improvement Percentage:</label>
                 <input type="number" id="productivityImprovement" disabled>
             </div>
 
