--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="wrapper">
-        <h1>IT Corporation ROI Calculator</h1>
+        <h1>Offshore IT Development ROI Calculator</h1>
         <div id="initial">
             <h3>Expenses</h3>
             <div class="expensesDiv">
