--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="wrapper">
         <h1>Offshore IT Development ROI Calculator</h1>
+        <p id="opening">If you're considering exploring offshore software development, this calculator is designed to help you estimate the potential return on investment (ROI) for your organization. By inputting key metrics such as team size, salaries, and improvement strategies, you can gain valuable insights into the financial impact of optimizing your software development processes through offshoring.</p>
         <div id="initial">
             <h3>Step 1: Expenses</h3>
             <div class="expensesDiv">
@@ -88,7 +89,7 @@
             <p><strong>Productivity Gains:</strong></p>
             <p><strong>Outsourcing Savings:</strong></p>
             <p><strong>Total Savings and Gains:</strong></p>
-            <p><strong>ROI:</strong></p>
+            <p><span class="roi-border"><strong>ROI: </strong></span></p>
             <p><strong>ROI Ratio:</strong></p>
             <p><strong>Payback Period:</strong></p>
             <p><strong>Net Present Value (NPV):</strong></p>
