--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+﻿
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -30,7 +31,7 @@
             </div>
 
             <div class="expensesDiv">
-                <label for="hrCost">Total HR Salaries/ Expenses:</label>
+                <label for="hrCost">HR Expenses Per Employee:</label>
                 <input class="typed" type="number" id="hrCost" required value="25000">
             </div>
 
@@ -108,7 +109,7 @@
             <strong>Number of Developers:</strong> The total number of developers in your software development team.<br>
             <strong>Average Annual Salary:</strong> The average annual salary of a developer in your organization.<br>
             <strong>Recruitment Cost Percentage:</strong> The cost paid out to recruiters as a percentage of the average annual salary of the new hires.<br>
-            <strong>HR Cost per Employee:</strong> The annual cost of HR salaries and expenses<br>
+            <strong>HR Expenses per Employee:</strong> The cost of advertising/ job board posting, potential in-house staffing, background checks/drug screening, pre-employment assesments, interviewing time, travel and accomodation, and onboarding costs, etc.<br>
             <strong>Code Churn Reduction:</strong> The estimated percentage reduction in code churn and rework. Enable the checkbox to include this in the calculation.<br>
             <strong>Technical Debt Percentage:</strong> The percentage of resources consumed by technical debt.<br>
             <strong>Productivity Improvement:</strong> The estimated percentage improvement in developer productivity. Enable the checkbox to include this in the calculation.<br>
