--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <strong>Number of Developers:</strong> The total number of developers in your software development team.<br>
             <strong>Average Annual Salary:</strong> The average annual salary of a developer in your organization.<br>
             <strong>Recruitment Cost Percentage:</strong> The cost paid out to recruiters as a percentage of the average annual salary of the new hires.<br>
-            <strong>HR Expenses per Employee:</strong> The cost of advertising/ job board posting, potential in-house staffing, background checks/drug screening, pre-employment assesments, interviewing time, travel and accomodation, and onboarding costs, etc.<br>
+            <strong>HR Expenses per Employee:</strong> The cost of advertising/ job board posting, potential in-house staffing, background checks/drug screening, pre-employment assessments, interviewing time, travel and accommodation, and onboarding costs, etc.<br>
             <strong>Code Churn Reduction:</strong> The estimated percentage reduction in code churn and rework. Enable the checkbox to include this in the calculation.<br>
             <strong>Technical Debt Percentage:</strong> The percentage of resources consumed by technical debt.<br>
             <strong>Productivity Improvement:</strong> The estimated percentage improvement in developer productivity. Enable the checkbox to include this in the calculation.<br>
