--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -52,19 +53,19 @@
 
             <h3 class="steps">Step 2: Savings</h3>
             <div class="savingsDiv">
-                <input type="checkbox" id="codeChurnReductionToggle" onchange="toggleInput('codeChurnReduction')">
+                <input type="checkbox" id="codeChurnReductionToggle" class="toggles" onchange="toggleInput('codeChurnReduction')">
                 <label for="codeChurnReductionToggle">Code Churn Reduction %:</label>
                 <input class="typed" type="number" id="codeChurnReduction" disabled>
             </div>
 
             <div class="savingsDiv">
-                <input type="checkbox" id="productivityImprovementToggle" onchange="toggleInput('productivityImprovement')">
+                <input type="checkbox" id="productivityImprovementToggle" class="toggles" onchange="toggleInput('productivityImprovement')">
                 <label for="productivityImprovementToggle">Productivity Increase %:</label>
                 <input class="typed" type="number" id="productivityImprovement" disabled>
             </div>
 
             <div class="savingsDiv">
-                <input type="checkbox" id="outsourcingToggle" onchange="toggleOutsourcing()">
+                <input type="checkbox" id="outsourcingToggle" class="toggles" onchange="toggleOutsourcing()">
                 <label for="outsourcingToggle">Outsourcing:</label>
             </div>
 
@@ -94,7 +95,7 @@
             <p><strong>Payback Period:</strong></p>
             <p><strong>Net Present Value (NPV):</strong></p>
         </div>
-        <p> </p>
+
         <h2 id="leadh2">How to Use</h2>
         <p class="info">
             1. Enter the required information in the input fields.<br>
